--- a/src/Contact/Contact.scss
+++ b/src/Contact/Contact.scss
@@ -1,33 +1,34 @@
 .contact-container {
-  font-size: 20px;
-  background-color: #d1c0c7; 
-  height: 15vh;
-  display: flex;
-  flex-flow: column;
-  align-items: flex-start;
-  justify-content: center;
-  padding-left: 80px;
+  font-size: 25px;
+  color: #a4a4a4;
 }
 
 .contact-info-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
   line-height: 35px;
-  text-align: left;
+  padding: 10px 0;
 }
 
 .fas, .fab {
-  margin-right: 10px;
+  cursor: pointer;
+  margin-right: 12px;
+
+  &.fa-envelope {
+    color: #eed96d;
+  }
+  
+  &.fa-linkedin {
+    color: #ccbaac;
+  }
+
+  &.fa-github {
+    color: #737370;
+  }
 }
 
-.link, link:visited {
-  font-size: 20px;
-  color: black;
-}
 
-.link:hover {
-  color: #7e556a;
-  text-decoration: underline;
-  font-size: 20px;
-}
 
 @media screen and (max-width: 400px) {
   .contact-container {
