--- a/src/main.scss
+++ b/src/main.scss
@@ -5,6 +5,6 @@
 @import './Contact/Contact.scss';
 
 * {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Archivo', 'Raleway', sans-serif;
   line-height: 1.5;
 }
