Add labels and refactor

--- a/src/Banner/Banner.scss
+++ b/src/Banner/Banner.scss
@@ -5,6 +5,12 @@
   margin: 0 15px;
 }
 
+.profile-pic {
+  width: 235px;
+  height: 300px;
+  margin-top: 15px;
+}
+
 .title-text {
   font-size: 65px;
   padding: 15px 0;
