Add additional child components and routing

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,7 +1,10 @@
 @import './normalize.css';
 @import './App.scss';
 @import './Banner/Banner.scss';
+@import './Projects/MobileDashboard.scss';
 @import './Projects/Projects.scss';
+@import './Projects/AddingBrandsModal.scss';
+@import './Projects/WhiteLabelLandingPage.scss';
 @import './Contact/Contact.scss';
 
 * {
