--- a/src/Projects/Projects.scss
+++ b/src/Projects/Projects.scss
@@ -41,9 +41,9 @@
     .arrow-button {
       position: absolute;
       bottom: 20px;
-      right: 25px;
+      right: 35px;
       background: rgba(0,0,0,0.6);
-      color: #fff;
+      color: #FFF;
       border: none;
       padding: 8px 12px;
       border-radius: 50%;
@@ -52,6 +52,8 @@
       pointer-events: none;
       transition: opacity 0.3s ease;
       cursor: pointer;
+      width: 40px;
+      height: 40px;
 
       @media screen and (min-width: 1600px) {
         bottom: 30px;
