--- a/src/Projects/AddingBrandsModal.scss
+++ b/src/Projects/AddingBrandsModal.scss
@@ -1,16 +1,80 @@
 .adding-brands-modal-container {
    margin: 15px;
+
+   .mobile-dashboard-description {
+    display: flex;
+
+    .info-section {
+      width: 50%;
+
+      .info-row {
+        padding: 20px 0;
+        display: flex;
+
+        .info-label {
+          width: 50%;
+          font-weight: bold;
+        }
+      }
+    }
+   }
+
+   .button-container {
+    display: flex;
+    justify-content: center;
+   }
+
+   .project-title {
+      font-size: 20px;
+      letter-spacing: 1px;
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      color: black;
+      padding-bottom: 5px;
+      align-items: flex-end;
+    }
+
+    .project-number {
+      font-weight: bold;
+      margin-right: 8px;
+    }
+
+    .project-screenshot {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+    }
+
+    .project-img {
+      width: 48vw;
+      max-width: 1000px;
+    }
+
   .arrow-button {
-    background: rgba(0,0,0,0.6);
-    color: #FFF;
+    background: none;
+    color: black;
     border: none;
-    padding: 8px 12px;
+    padding: 8px;
     border-radius: 50%;
-    font-size: 20px;
+    font-size: 18px;
     pointer-events: none;
     transition: opacity 0.3s ease;
     cursor: pointer;
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
+  }
+
+  .line-spacer {
+    height: 1px;
+    background-color: #ddd;
+    margin: 3px;
+    border: none;
+  }
+
+  .project-text {
+    padding: 20px 0;
+    font-size: 20px;
   }
 }
