--- a/src/main.scss
+++ b/src/main.scss
@@ -11,3 +11,98 @@
   font-family: 'Archivo', 'Raleway', sans-serif;
   line-height: 1.5;
 }
+
+.feature-product-container {
+   margin: 15px;
+}
+
+.feature-product-description {
+  display: flex;
+  flex-direction: column-reverse;
+
+  @media screen and (min-width: 1024px) {
+    flex-direction: row;
+  }
+}
+
+.feature-product-info-section {
+  width: 100%;;
+
+  @media screen and (min-width: 1024px) {
+    width: 50%;
+  }
+
+  .info-row {
+    padding: 20px 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .info-label {
+    width: 50%;
+    font-weight: bold;
+  }
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+
+.feature-project-title {
+  font-size: 20px;
+  letter-spacing: 1px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  color: black;
+  padding-bottom: 5px;
+  align-items: flex-end;
+}
+
+.feature-project-number {
+  font-weight: bold;
+  margin-right: 8px;
+}
+
+.feature-project-screenshot {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  flex-direction: column;
+}
+
+.feature-project-img {
+  max-width: 1200px;
+  width: 90vw;
+  @media screen and (min-width: 1024px) {
+    width: 60vw;
+  }
+}
+
+.arrow-button {
+  background: none;
+  color: black;
+  border: none;
+  padding: 8px;
+  border-radius: 50%;
+  font-size: 18px;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+  cursor: pointer;
+  width: 35px;
+  height: 35px;
+}
+
+.line-spacer {
+  height: 1px;
+  background-color: #ddd;
+  margin: 3px;
+  border: none;
+}
+
+.feature-project-text {
+  padding: 20px 0;
+  font-size: 20px;
+}
